# musicseed

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
docs/: harness-engineering.md  implementation-plan.md
docs/ard/: 001-initial-system-design.md
docs/domain/: music-recommendation.md
docs/infra/: local-runtime.md
docs/product/: overview.md
docs/resolvers/: recommendation-resolvers.md
scripts/: enrich_spotify_c_to_z.sh
src/musicseed/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py
src/musicseed/clients/: __init__.py  plex_api.py
src/musicseed/db/: models.py  session.py
src/musicseed/embeddings/: __init__.py  essentia_embed.py  pipeline.py
src/musicseed/enrichers/: __init__.py  listenbrainz.py  musicbrainz.py  pipeline.py  spotify.py
src/musicseed/importers/: __init__.py  plex.py
src/musicseed/recommender/: candidates.py  playlist.py  scoring.py
src/musicseed/services/: enrichment.py  library.py  recommend.py
