[project]
name = "musicseed"
version = "0.1.0"
description = "Music recommendation CLI that creates Plex playlists based on seed tracks"
readme = "README.md"
authors = [
    { name = "Daniel Valencia", email = "dafevara@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "numpy>=1.24",
    "essentia-tensorflow>=2.1b6.dev1389",
]

[project.scripts]
musicseed = "musicseed.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicseed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
